--- a/MobaBoardGame/MobaBoardGame/MobaBoardGame.vcxproj
+++ b/MobaBoardGame/MobaBoardGame/MobaBoardGame.vcxproj
@@ -165,18 +165,20 @@
   <ItemGroup>
     <ClCompile Include="Ability.cpp" />
     <ClCompile Include="Character.cpp" />
-    <ClCompile Include="CharacterAttributes.cpp" />
-    <ClCompile Include="CharacterDurationEffect.cpp" />
+    <ClCompile Include="Attributes.cpp" />
+    <ClCompile Include="CharacterDurationEffects.cpp" />
     <ClCompile Include="DurationEffect.cpp" />
+    <ClCompile Include="HealthPoisonEffect.cpp" />
     <ClCompile Include="Item.cpp" />
-    <ClCompile Include="MobaBoardGame.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ability.h" />
     <ClInclude Include="Character.h" />
-    <ClInclude Include="CharacterAttributes.h" />
-    <ClInclude Include="CharacterDurationEffect.h" />
+    <ClInclude Include="Attributes.h" />
+    <ClInclude Include="CharacterDurationEffects.h" />
     <ClInclude Include="DurationEffect.h" />
+    <ClInclude Include="HealthPoisonEffect.h" />
     <ClInclude Include="Item.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
