--- a/MobaBoardGame/MobaBoardGame/MobaBoardGame.vcxproj
+++ b/MobaBoardGame/MobaBoardGame/MobaBoardGame.vcxproj
@@ -163,10 +163,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DamageEffect.cpp" />
     <ClCompile Include="EmptyPassive.cpp" />
+    <ClCompile Include="EnhancedBasicPassive.cpp" />
     <ClCompile Include="HealthDrainEffect.cpp" />
-    <ClCompile Include="LifeDrainAbility.cpp" />
-    <ClCompile Include="LifeStealPassive.cpp" />
+    <ClCompile Include="LifeHarvestAbility.cpp" />
+    <ClCompile Include="AttackHealPassive.cpp" />
     <ClCompile Include="SelfAbility.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Attributes.cpp" />
@@ -175,7 +177,7 @@
     <ClCompile Include="CharacterObserver.cpp" />
     <ClCompile Include="Effect.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="HealthPoisonEffect.cpp" />
+    <ClCompile Include="HealthEffect.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ParalyseEffect.cpp" />
@@ -185,10 +187,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CharacterAction.h" />
+    <ClInclude Include="DamageEffect.h" />
     <ClInclude Include="EmptyPassive.h" />
+    <ClInclude Include="EnhancedBasicPassive.h" />
     <ClInclude Include="HealthDrainEffect.h" />
-    <ClInclude Include="LifeDrainAbility.h" />
-    <ClInclude Include="LifeStealPassive.h" />
+    <ClInclude Include="LifeHarvestAbility.h" />
+    <ClInclude Include="AttackHealPassive.h" />
     <ClInclude Include="SelfAbility.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Attributes.h" />
@@ -197,7 +201,7 @@
     <ClInclude Include="CharacterObserver.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="HealthPoisonEffect.h" />
+    <ClInclude Include="HealthEffect.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ParalyseEffect.h" />
     <ClInclude Include="PassiveAbility.h" />
